# kickstart-ai

./: README.md  __init__.py  core.py  pyproject.toml
backend/: hf_backend.py  openai_backend.py
workflow/: python-publish.yml
